# zana

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cicd.yml  deploy.yml  release.yml
deployment/zana_aws/: README.md  cdk.json  pom.xml
documentation/: zana_aws.drawio
extension/: package-lock.json  package.json
extension/addon/: background.js  content_script.js  manifest.json
extension/addon/css/: dukagjinibooks.css
extension/addon/modules/: dukagjinibooks.js
extension/platform/chrome/: manifest.json
extension/tests/dukagjinibooks/: dom.html  dukagjinibooks.jest.config.js  dukagjinibooks.test.js
extension/zana/: background.js  content_script.js  manifest.json
services/zana/: Cargo.toml
services/zana/src/: googlebooks.rs  lib.rs  openlibrary.rs
services/zana/tests/: googlebooks.rs  openlibrary.rs  util.rs
services/zana/tests/sample/: googlebooks_volume.json  openlibrary_isbn.json  openlibrary_isbn_no_works_key.json  openlibrary_no_ratings.json  openlibrary_ratings.json  openlibrary_works.json  openlibrary_works_no_description.json  openlibrary_works_string_description.json
services/zana_lambda/: Cargo.toml  README.md
services/zana_lambda/src/: book.rs  http.rs  lib.rs  main.rs  params.rs
services/zana_lambda/tests/: params.rs
tools/: chrome_build.sh
tools/extension/: chrome_build.sh
tools/release/: index.js  jest.config.js  main.js  package-lock.json  package.json  release.js
(+13 files in other folders)
