[package]
name = "zana"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.64"

[dev-dependencies]
httpmock = "0.6"
