[package]
name = "zana"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.64"
log = "0.4.17"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
httpmock = "0.6"
